pt/patch-oidc-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oidc-sinatra
  annotations:
    external-dns.alpha.kubernetes.io/hostname: oidc-sinatra.loadtest.identitysandbox.gov
spec:
  tls:
    - hosts:
        - oidc-sinatra.loadtest.identitysandbox.gov
